<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WoodPatio">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="337dp"
        android:layout_height="268dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/imgPatio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWoodItem7"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/patio" />

    <TextView
        android:id="@+id/txtWoodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/txtWoodTitle"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWoodItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtWoodItem1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWoodTitle" />

    <TextView
        android:id="@+id/txtWoodItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtWoodItem2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtWoodItem1"
        app:layout_constraintTop_toBottomOf="@+id/txtWoodItem1" />

    <TextView
        android:id="@+id/txtWoodItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtWoodItem3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtWoodItem1"
        app:layout_constraintTop_toBottomOf="@+id/txtWoodItem2" />

    <TextView
        android:id="@+id/txtWoodItem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtWoodItem4"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtWoodItem1"
        app:layout_constraintTop_toBottomOf="@+id/txtWoodItem3" />

    <TextView
        android:id="@+id/txtWoodItem5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtWoodItem5"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtWoodItem1"
        app:layout_constraintTop_toBottomOf="@+id/txtWoodItem4" />

    <TextView
        android:id="@+id/txtWoodItem6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtWoodItem6"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtWoodItem1"
        app:layout_constraintTop_toBottomOf="@+id/txtWoodItem5" />

    <TextView
        android:id="@+id/txtWoodItem7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtWoodItem7"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtWoodItem1"
        app:layout_constraintTop_toBottomOf="@+id/txtWoodItem6" />
</android.support.constraint.ConstraintLayout>